# fasta_grep

./: .gitignore  INSTALL  README  README.md  configure.ac
src/: Makefile.am  main.c  parse_fasta.c  parse_fasta.h
tests/: check_parse_fasta.c  check_parse_fasta.h  run_all_tests.c
tests/data/: file_with_duplicates  input_fasta_file
